Fix card overflow

--- a/scss/components/_jwCard.scss
+++ b/scss/components/_jwCard.scss
@@ -56,13 +56,12 @@
         @include single-transition(background, 0.2s, ease, 0s);
         background: rgba($black, 0.1);
         cursor: pointer;
-        overflow: hidden;
     }
 
     .jw-card-table {
         display: table;
-        width: calc(100% + 1px);
-        height: calc(100% + 1px);
+        width: calc(100% + 0.5px);
+        height: calc(100% + 0.5px);
 
         table-layout: fixed;
     }
